--- a/.github/workflows/1.deploy_infrastructure.yaml
+++ b/.github/workflows/1.deploy_infrastructure.yaml
@@ -117,7 +117,21 @@ jobs:
           else
             terraform destroy "tfplan"
           fi
-          
+
+      - name: Apply or Destroy Terraform develop Infrastruture
+        working-directory: deploy
+        run: |
+          export CONFIG_FILE_PATH="4.ANSIBLE/0.CONFIG/ansible.cfg"
+          export INVENTORY_FILE_PATH="4.ANSIBLE/0.CONFIG/hosts"
+          export HOST_GROUP="bastion"
+          if [[ "${{ env.DEPLOY_MODE }}" == "deploy" ]]; then
+            export PLAYBOOK_DIR="4.ANSIBLE/0.CONFIG/1.PLAYBOOK_APPLY"
+            bash "1.WORKFLOWS_SCRIPT/execute_ansible_playbook.sh"
+          else
+            # export PLAYBOOK_DIR="4.ANSIBLE/0.CONFIG/2.PLAYBOOK_DESTROY"
+            # bash "1.WORKFLOWS_SCRIPT/execute_ansible_playbook.sh"
+          fi
+
       # - name: Plan and Apply Terraform develop Infrastruture
       #   working-directory: deploy/2.TERRAFORM/01.SEOUL
       #   env:
