--- a/4.ANSIBLE/1.PLAYBOOK_APPLY/01.playbook_required_custom_work.yaml
+++ b/4.ANSIBLE/1.PLAYBOOK_APPLY/01.playbook_required_custom_work.yaml
@@ -18,16 +18,16 @@
       copy:
         src: /home/runner/.aws/config
         dest: /home/{{ ansible_user }}/.aws/config
-        owner: {{ ansible_user }}  # Optional: Set the owner of the file
-        group: {{ ansible_user }}  # Optional: Set the group of the file
+        owner: "{{ ansible_user }}"  # Optional: Set the owner of the file
+        group: "{{ ansible_user }}"  # Optional: Set the group of the file
         mode: 0644  # Optional: Set the permissions of the file
 
     - name: Copy file to remote hosts
       copy:
         src: /home/runner/.aws/config
         dest: /home/{{ ansible_user }}/.aws/credentials
-        owner: {{ ansible_user }}  # Optional: Set the owner of the file
-        group: {{ ansible_user }}  # Optional: Set the group of the file
+        owner: "{{ ansible_user }}"  # Optional: Set the owner of the file
+        group: "{{ ansible_user }}"  # Optional: Set the group of the file
         mode: 0644  # Optional: Set the permissions of the file
 
     - name: Create AWS configuration directory
