--- a/4.ANSIBLE/1.PLAYBOOK_APPLY/09.playbook_k8s_kops_create_cluster.yaml
+++ b/4.ANSIBLE/1.PLAYBOOK_APPLY/09.playbook_k8s_kops_create_cluster.yaml
@@ -87,10 +87,10 @@
     #     -oyaml > {{ KOPS_DIR }}/{{ KOPS_CLUSTER_NAME }}.yaml
     #   when: not cluster_exists|default(false)
 
-    # - name: Create kubernetes cluster configuration file to s3 bucket
-    #   shell: |
-    #     kops create -f {{ KOPS_DIR }}/{{ KOPS_CLUSTER_NAME }}.yaml --state {{ KOPS_STATE_S3 }}
-    #   when: not cluster_exists|default(false)
+    - name: Create kubernetes cluster configuration file to s3 bucket
+      shell: |
+        kops create -f {{ KOPS_DIR }}/{{ KOPS_CLUSTER_NAME }}.yaml --state {{ KOPS_STATE_S3 }}
+      when: not cluster_exists|default(false)
 
     # - name: Create kubernetes cluster
     #   shell: |
