--- a/.github/workflows/1.deploy_infrastructure.yaml
+++ b/.github/workflows/1.deploy_infrastructure.yaml
@@ -117,11 +117,10 @@ jobs:
           TF_VAR_OPS_GIT_REPO_AUTH_URL: "https://${{ env.OPS_GIT_REPO_OWNER }}:${{ env.OPS_GIT_REPO_PERSONAL_TOKEN }}@github.com/${{ env.OPS_GIT_REPO_OWNER }}/${{ env.OPS_GIT_REPO_NAME }}.git"
           TF_VAR_ANSIBLE_CONF_FILE: "../../${{ env.INFRA_ANSIBLE_CONF }}"
           TF_VAR_ANSIBLE_HOSTS_FILE: "../../${{ env.INFRA_ANSIBLE_HOSTS }}"
-          TF_VAR_K8S_TPL_VALUE_NEW_JSON_FILE: "../../${{ env.INFRA_K8S_TPL_VALUE_NEW_JSON_FILE }}"
-          TF_VAR_LOCAL_K8S_TPL_RENDERER_PY_FILE: "${{ env.INFRA_K8S_TPL_RENDERER_PY_FILE }}"
-          TF_VAR_LOCAL_K8S_TPL_J2_FILE: "${{ env.INFRA_K8S_TPL_J2_FILE }}"
-          TF_VAR_LOCAL_K8S_TPL_VALUE_JSON_FILE: "${{ env.INFRA_K8S_TPL_VALUE_JSON_FILE }}"
-          TF_VAR_LOCAL_K8S_CONF_YAML_FILE: "${{ env.INFRA_K8S_CONF_YAML_FILE }}"
+          TF_VAR_K8S_TPL_RENDERER_PY_FILE: "${{ env.INFRA_K8S_TPL_RENDERER_PY_FILE }}"
+          TF_VAR_K8S_TPL_J2_FILE: "${{ env.INFRA_K8S_TPL_J2_FILE }}"
+          TF_VAR_K8S_TPL_VALUE_JSON_FILE: "${{ env.INFRA_K8S_TPL_VALUE_JSON_FILE }}"
+          TF_VAR_K8S_CONF_YAML_FILE: "${{ env.INFRA_K8S_CONF_YAML_FILE }}"
         run: |
           terraform validate
           terraform plan -var-file="${{ env.INFRA_TF_VAR_FILE_NAME_DEV }}" -out=tfplan
