--- a/4.ANSIBLE/1.PLAYBOOK_APPLY/09.playbook_k8s_kops_create_cluster.yaml
+++ b/4.ANSIBLE/1.PLAYBOOK_APPLY/09.playbook_k8s_kops_create_cluster.yaml
@@ -89,7 +89,7 @@
 
     - name: Create kubernetes cluster configuration file to s3 bucket
       shell: |
-        kops create -f {{ KOPS_DIR }}/{{ KOPS_CLUSTER_NAME }}.yaml --state {{ KOPS_STATE_S3 }}
+        kops create -f {{ K8S_CONF_YAML_FILE }} --state {{ KOPS_STATE_S3 }}
       when: not cluster_exists|default(false)
 
     # - name: Create kubernetes cluster
