--- a/4.ANSIBLE/1.PLAYBOOK_APPLY/00.playbook_required_work_localhost.yaml
+++ b/4.ANSIBLE/1.PLAYBOOK_APPLY/00.playbook_required_work_localhost.yaml
@@ -1,9 +1,13 @@
 - name: Do Required Woking for Local
   gather_facts: false
-  hosts: localhost
+  hosts: local
 
   tasks:
 
     - name: Create 
       shell: |
-        python {{ K8S_TPL_RENDERER_PY_FILE }} {{ K8S_TPL_J2_FILE }} {{ K8S_TPL_VALUE_JSON_FILE }} {{ K8S_CONF_YAML_FILE }}
+        python "{{ K8S_TPL_RENDERER_PY_FILE }}" "{{ K8S_TPL_J2_FILE }}" "{{ K8S_TPL_VALUE_JSON_FILE }}" "{{ K8S_CONF_YAML_FILE }}"
+    
+    - name: Create 
+      shell: |
+        cat "{{ K8S_CONF_YAML_FILE }}"
