--- a/4.ANSIBLE/1.PLAYBOOK_APPLY/00.playbook_required_work_localhost.yaml
+++ b/4.ANSIBLE/1.PLAYBOOK_APPLY/00.playbook_required_work_localhost.yaml
@@ -4,10 +4,10 @@
 
   tasks:
 
-    - name: Create 
+    - name: Create kubernetes cluster configuration file
       shell: |
         python "{{ K8S_TPL_RENDERER_PY_FILE }}" "{{ K8S_TPL_J2_FILE }}" "{{ K8S_TPL_VALUE_JSON_FILE }}" "{{ K8S_CONF_YAML_FILE }}"
-    #
-    - name: Create 
+
+    - name: Check
       shell: |
         cat "{{ K8S_CONF_YAML_FILE }}"
