--- a/.github/workflows/1.deploy_infrastructure.yaml
+++ b/.github/workflows/1.deploy_infrastructure.yaml
@@ -35,10 +35,10 @@ jobs:
       INFRA_TF_VAR_FILE_NAME_DEV: "./ENV/dev.tfvars"
       INFRA_ANSIBLE_CONF: "4.ANSIBLE/0.CONFIG/ansible.cfg"
       INFRA_ANSIBLE_HOSTS: "4.ANSIBLE/0.CONFIG/hosts"
-      INFRA_K8S_TPL_RENDERER_PY_FILE: "1.WORKFLOWS_SCRIPT/render_template.py"
-      INFRA_K8S_TPL_J2_FILE: "5.K8S/00.kops_cluster_tpl.j2"
-      INFRA_K8S_TPL_VALUE_JSON_FILE: "5.K8S/01.kops_cluster_tpl_value.j2"
-      INFRA_K8S_CONF_YAML_FILE: "5.K8S/02.kops_cluster_conf.yaml"
+      INFRA_KOPS_TPL_RENDERER_PY_FILE: "1.WORKFLOWS_SCRIPT/render_template.py"
+      INFRA_KOPS_TPL_J2_FILE: "5.K8S/00.kops_cluster_tpl.j2"
+      INFRA_KOPS_TPL_VALUE_JSON_FILE: "5.K8S/01.kops_cluster_tpl_value.j2"
+      INFRA_KOPS_CONF_YAML_FILE: "5.K8S/02.kops_cluster_conf.yaml"
       CLOUDFLARE_EMAIL: ${{ secrets.CLOUDFLARE_EMAIL_MAIN_1 }}
       CLOUDFLARE_API_KEY: ${{ secrets.CLOUDFLARE_API_KEY_MAIN_1 }}
       CLOUDFLARE_DOMAIN: ${{ secrets.CLOUDFLARE_DOMAIN_MAIN_1 }}
@@ -117,10 +117,10 @@ jobs:
           TF_VAR_OPS_GIT_REPO_AUTH_URL: "https://${{ env.OPS_GIT_REPO_OWNER }}:${{ env.OPS_GIT_REPO_PERSONAL_TOKEN }}@github.com/${{ env.OPS_GIT_REPO_OWNER }}/${{ env.OPS_GIT_REPO_NAME }}.git"
           TF_VAR_ANSIBLE_CONF_FILE: "../../${{ env.INFRA_ANSIBLE_CONF }}"
           TF_VAR_ANSIBLE_HOSTS_FILE: "../../${{ env.INFRA_ANSIBLE_HOSTS }}"
-          TF_VAR_K8S_TPL_RENDERER_PY_FILE: "${{ env.INFRA_K8S_TPL_RENDERER_PY_FILE }}"
-          TF_VAR_K8S_TPL_J2_FILE: "${{ env.INFRA_K8S_TPL_J2_FILE }}"
-          TF_VAR_K8S_TPL_VALUE_JSON_FILE: "${{ env.INFRA_K8S_TPL_VALUE_JSON_FILE }}"
-          TF_VAR_K8S_CONF_YAML_FILE: "${{ env.INFRA_K8S_CONF_YAML_FILE }}"
+          TF_VAR_KOPS_TPL_RENDERER_PY_FILE: "${{ env.INFRA_KOPS_TPL_RENDERER_PY_FILE }}"
+          TF_VAR_KOPS_TPL_J2_FILE: "${{ env.INFRA_KOPS_TPL_J2_FILE }}"
+          TF_VAR_KOPS_TPL_VALUE_JSON_FILE: "${{ env.INFRA_KOPS_TPL_VALUE_JSON_FILE }}"
+          TF_VAR_KOPS_CONF_YAML_FILE: "${{ env.INFRA_KOPS_CONF_YAML_FILE }}"
         run: |
           if [[ "${{ env.DEPLOY_MODE }}" == "deploy" ]]; then
             terraform validate
