--- a/4.ANSIBLE/1.PLAYBOOK_APPLY/01.playbook_required_work_localhost.yaml
+++ b/4.ANSIBLE/1.PLAYBOOK_APPLY/01.playbook_required_work_localhost.yaml
@@ -1,6 +1,6 @@
 - name: Do Required Woking for Local
   gather_facts: true
-  hosts: localhost
+  hosts: local
 
   vars:
     ansible_python_interpreter: "/usr/bin/python3"
