--- a/4.ANSIBLE/2.PLAYBOOK_DESTROY/00.playbook_kops_delete_cluster.yaml
+++ b/4.ANSIBLE/2.PLAYBOOK_DESTROY/00.playbook_kops_delete_cluster.yaml
@@ -9,6 +9,7 @@
   vars:
     ansible_python_interpreter: "/usr/bin/python3"
     playbook_file_path: "{{ (lookup('file', '/proc/self/cmdline') | regex_replace('\u0000',' ')).split() | select('match','^.*[.]ya?ml$') | list | first }}"
+    playbook_dir_path: "{{ playbook_file_path | dirname }}"
     playbook_file_name: "{{ playbook_file_path | basename }}"
 
   tasks:
