--- a/4.ANSIBLE/1.PLAYBOOK_APPLY/09.playbook_kops_create_cluster.yaml
+++ b/4.ANSIBLE/1.PLAYBOOK_APPLY/09.playbook_kops_create_cluster.yaml
@@ -15,14 +15,16 @@
 
     - name: Check if S3 Bucket kops state directory exists
       shell: |
-        aws s3api list-objects --bucket "{{ KOPS_STATE_S3_BUCKET }}" --prefix "{{ KOPS_STATE_S3_DIR }}/" --profile "{{ AWS_PROFILE }}"
-      register: s3_object_status
+        output=$(aws s3api list-objects --bucket "{{ KOPS_STATE_S3_BUCKET }}" --prefix "{{ KOPS_STATE_S3_DIR }}" --profile "{{ AWS_PROFILE }}")
+        request_charged=$(echo "$output" | jq -r '.RequestCharged')
+        echo "$request_charged"
       ignore_errors: yes
-
+      register: s3_object_status
+  
     - name: Create S3 Bucket directory for kops state
       shell: |
         aws s3api put-object --bucket "{{ KOPS_STATE_S3_BUCKET }}" --key "{{ KOPS_STATE_S3_DIR }}/" --profile "{{ AWS_PROFILE }}"
-      when: s3_object_status.rc != 0
+      when: s3_object_status.rc != 0 or s3_object_status.rc != "null"
 
     - name: Add export statement for AWS_PAGER to ~/.bashrc
       lineinfile:
