--- a/4.ANSIBLE/1.PLAYBOOK_APPLY/09.playbook_kops_create_cluster.yaml
+++ b/4.ANSIBLE/1.PLAYBOOK_APPLY/09.playbook_kops_create_cluster.yaml
@@ -24,7 +24,7 @@
     - name: Create S3 Bucket directory for kops state
       shell: |
         aws s3api put-object --bucket "{{ KOPS_STATE_S3_BUCKET }}" --key "{{ KOPS_STATE_S3_DIR }}/" --profile "{{ AWS_PROFILE }}"
-      when: s3_object_status.rc != 0 or s3_object_status.rc != "null"
+      when: s3_object_status.rc != 0 or s3_object_status.rc == "null"
 
     - name: Add export statement for AWS_PAGER to ~/.bashrc
       lineinfile:
