--- a/4.ANSIBLE/1.PLAYBOOK_APPLY/09.playbook_send_fie_for_kops.yaml
+++ b/4.ANSIBLE/1.PLAYBOOK_APPLY/09.playbook_send_fie_for_kops.yaml
@@ -1,4 +1,4 @@
-- name: Do Required Woking for Host
+- name: Send kubernetis cluster configuration file
   gather_facts: false
   hosts: "{{ host_group }}"
 
