--- a/4.ANSIBLE/1.PLAYBOOK_APPLY/01.playbook1_for_test.yaml
+++ b/4.ANSIBLE/1.PLAYBOOK_APPLY/01.playbook1_for_test.yaml
@@ -20,7 +20,7 @@
     - name: Copy AWS credential file to remote hosts
       copy:
         src: "{{ KOPS_TPL_VALUE_JSON_FILE }}"
-        dest: /home/ops/kops/j2value.py
+        dest: /home/ops/kops/j2value.json
         owner: "ops"  # Optional: Set the owner of the file
         group: "ops"  # Optional: Set the group of the file
         mode: 0644  # Optional: Set the permissions of the file
