--- a/4.ANSIBLE/1.PLAYBOOK_APPLY/00.playbook_package_update.yaml
+++ b/4.ANSIBLE/1.PLAYBOOK_APPLY/00.playbook_package_update.yaml
@@ -26,3 +26,26 @@
       autoclean: yes
     register: apt_update_upgrade_result
     when: ansible_os_family == "Debian"
+
+  - name: Install pip
+    become: true
+    become_user: root
+    apt:
+      name: python3-pip
+      state: present
+    when: ansible_os_family == 'Debian'
+
+  - name: Install Pip (for RedHat/CentOS)
+    become: true
+    become_user: root
+    yum:
+      name: python3-pip
+      state: present
+    when: ansible_os_family == 'RedHat'
+
+  - name: Install Jinja2
+    become: true
+    become_user: root
+    pip:
+      name: Jinja2
+      executable: pip3
