--- a/4.ANSIBLE/1.PLAYBOOK_APPLY/09.playbook_kops_create_cluster.yaml
+++ b/4.ANSIBLE/1.PLAYBOOK_APPLY/09.playbook_kops_create_cluster.yaml
@@ -102,7 +102,7 @@
 
     - name: Create kubernetes cluster configuration file to s3 bucket
       shell: |
-        kops create -f {{ KOPS_CONF_YAML_FILE }} --state {{ KOPS_STATE_S3 }}
+        kops create -f {{ KOPS_DIR }}/{{ KOPS_CONF_YAML_FILE_NAME }} --state {{ KOPS_STATE_S3 }}
       when: not cluster_exists|default(false)
 
     - name: Create kubernetes cluster
